Sidebar works, but there's an issue of the content behind still being scrollable (or at least it does that weird pull up/down thing)

--- a/src/mobile/Content.css
+++ b/src/mobile/Content.css
@@ -1,3 +1,9 @@
+#page-wrap {
+    height: 100%;
+    overflow: auto;
+    z-index: 1;
+}
+
 .professionalContent {
     padding-top: 2.5rem;
     text-align: left;
