--- a/src/mobile/Header.css
+++ b/src/mobile/Header.css
@@ -1,3 +1,7 @@
+#outer-container {
+    height: 100%;
+}
+
 .shoka__header.mobile {
     position: fixed;
     top: 0;
